--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
-name = "vertical"
+name = "climbsheet"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]]
+name = "climbsheet"
+path = "src/bin/main.rs"
 
 [dependencies]
 chrono = { version = "0.4.23", features = ["serde"] }
