--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "climbsheet"
 version = "0.1.0"
 edition = "2021"
+default-run = "climbsheet"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -29,3 +30,4 @@ url = "2.3.1"
 sha2 = "0.10.6"
 toml = "0.7.2"
 secrecy = { version = "0.8.0", features = ["serde"] }
+futures = "0.3.26"
