--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,9 @@ sha2 = "0.10.6"
 toml = "0.7.2"
 secrecy = { version = "0.8.0", features = ["serde"] }
 futures = "0.3.26"
+
+# Use vendored openssl. We don't depend on it directly.
+openssl = { version = "0.10.45", features = ["vendored"], optional = true }
+
+[features]
+vendored-openssl = ["openssl"]
