--- a/deploy/yaml/cronjob.yaml
+++ b/deploy/yaml/cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: climbsheet-cronjob
 spec:
-  schedule: '0 13 * * *'
+  schedule: "0 13 * * *"
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
@@ -23,13 +23,13 @@ spec:
               imagePullPolicy: Always
               image: TEMP
               volumeMounts:
-                - mountPath: '/data'
+                - mountPath: "/data"
                   name: climbsheet-volume
               env:
                 - name: CONFIG_PATH
-                  value: '/data/config.toml'
+                  value: "/data/config.toml"
                 - name: RUST_LOG
-                  value: 'info'
+                  value: "info"
           volumes:
             - name: climbsheet-volume
               persistentVolumeClaim:
