--- a/deploy/yaml/pvc.yaml
+++ b/deploy/yaml/pvc.yaml
@@ -1,12 +1,31 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: climbsheet-pv
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 1000Gi
+  claimRef:
+    namespace: default
+    name: climbsheet-pvc
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: "/mnt/volume-fsn1-1/local-storage/climbsheet"
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: climbsheet-pvc
-  namespace: default
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
   resources:
     requests:
-      storage: 1Mi
+      storage: 1000Gi
+  volumeName: climbsheet-pv
