--- a/deploy/chart/templates/climbsheet-cronjob.yaml
+++ b/deploy/chart/templates/climbsheet-cronjob.yaml
@@ -1,7 +1,8 @@
+{{- $fullName := printf "%s-%s" (include "climbsheet.fullname" .) "cronjob" -}}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: climbsheet-cronjob
+  name: {{ $fullName }}
 spec:
   schedule: "0 13 * * *"
   concurrencyPolicy: Forbid
@@ -12,8 +13,7 @@ spec:
       template:
         metadata:
           labels:
-            app.kubernetes.io/instance: climbsheet
-            app.kubernetes.io/name: climbsheet
+            app.kubernetes.io/instance: {{ $fullName }}
         spec:
           restartPolicy: OnFailure
           imagePullSecrets:
@@ -21,7 +21,7 @@ spec:
           containers:
             - name: climbsheet
               imagePullPolicy: Always
-              image: TEMP
+              image: {{ .Values.image }}
               volumeMounts:
                 - mountPath: "/data"
                   name: climbsheet-volume
@@ -34,3 +34,4 @@ spec:
             - name: climbsheet-volume
               persistentVolumeClaim:
                 claimName: climbsheet-pvc
+
